# nameko-prometheus

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: build.yml
ci/: bootstrap.py  requirements.txt
ci/templates/: .travis.yml  tox.ini
docs/: conf.py  configuration.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/reference/: index.rst  nameko_prometheus.rst
example/: Dockerfile  README.rst  config.yml  docker-compose.yml  prometheus.yml  service.py
src/nameko_prometheus/: __init__.py  dependencies.py  utils.py
tests/: test_nameko_prometheus.py
