[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = "app/"
known_first_party = "nameko_prometheus"

[tool.mypy]
python_version = "3.20"
mypy_path = "src/"
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "eventlet.*",
    "nameko.*",
    "prometheus_client.*",
    "werkzeug.*",
]
ignore_missing_imports = true
