[build-system]
requires = [
    "setuptools>=68.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "nameko-prometheus"
description = "nameko-prometheus is a dependency for the nameko microservice framework which allows application metrics collection with Prometheus."
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.8"
authors = [{name="Emplocity"}]
dependencies = [
    "nameko>=2,<4",
    "prometheus_client>=0.15,<1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/emplocity/nameko-prometheus"
Documentation = "https://nameko-prometheus.readthedocs.io/"
Changelog = "https://nameko-prometheus.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/emplocity/nameko-prometheus/issues"


[tool.setuptools.dynamic]
version = {attr = "nameko_prometheus.__version__"}

[tool.check-manifest]
ignore = ["*.swp", ".mypy_cache"]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = "src/"
known_first_party = "nameko_prometheus"

[tool.mypy]
python_version = "3.10"
mypy_path = "src/"
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "eventlet.*",
    "nameko.*",
    "prometheus_client.*",
    "werkzeug.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = [".git", ".tox", "dist", "build"]
testpaths = ["tests"]
